Release: Merge develop to main for Docker deployment
* Add testcontainers dependency

* Set jacoco as default-clie

* Test 'F1ApiClient'

* Test 'CurrentYearValidator'

* Test 'SeasonChampionController'

* Set code coverage 70%

* Set code coverage 70%

* Resolve spotless issues

* Add generate test coverage report in pom.xml

* Update pom to exclude targets generated files

* Add dependabot

* Set not null properties with annotations

* Refactor

* Update database migration

* Apply spotless checks

* Resolve lnting issues

* Apply spotless check

* Update .gitignore

* Implement 'getAllSeasonChampsions'

* Implement DTOs to serve data to client

* Fix style warnings

* Refactor seed related services

* Rename seed services with better naming

* Update seed race winners

* Query and bind to 'RaceWinnerListItem'

* Implement query 'SeasonChampionsListItem'

* Update tests

* Apply spotless

* Implement Scheduler service (#2)

* Implment scheduler

* Refactor

* Test 'F1DataSchedulerService'

* Implement 'AdminController'

* Implement 'SeasonChampion' scheduler

* Fix race winner querying and seeding

* Test query and seed classes

* Fix champion flag ongoing season (#3)

* Implment scheduler

* Refactor

* Test 'F1DataSchedulerService'

* Implement 'AdminController'

* Implement 'SeasonChampion' scheduler

* Fix race winner querying and seeding

* Test query and seed classes

* Fix champion check for ongoing season

* Show correct race completion time

* Remove redundant test class

---------

Co-authored-by: ext_ugur.unlu@spark.net <ext_ugur.unlu@spark.net>

* Implement Redis cache (#4)

* Implement in-memory cache for all seasons query

* Implement Redis cache for all seasons

* Refactor

* Tag 'Docker' images with dev-<SHA>

* Remove unused timestamp from workflow

* Db integration test (#5)

* Add version to controller

* Test 'PostgreSql' database table mapping

* Remove Postgres service step from ci-cd.yml

* Apply spotless style

* Skip running integration te